force-app/main/default/objects/Delivery__c/Delivery__c.object-meta.xml
<CustomObject>
    <label>Delivery</label>
    <nameField>
        <label>Delivery Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deliveries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>