force-app/main/default/objects/Delivery__c/fields/CustomerMaterialNumber__c.field-meta.xml
<CustomField>
    <fullName>CustomerMaterialNumber__c</fullName>
    <label>Customer Material Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>