force-app/main/default/objects/Delivery__c/fields/DeliveryProductStatus__c.field-meta.xml
<CustomField>
    <fullName>DeliveryProductStatus__c</fullName>
    <label>DeliveryProductStatus</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
            <value>
                <fullName>Value2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>