force-app/main/default/objects/Delivery__c/fields/DeliveryQTY__c.field-meta.xml
<CustomField>
    <fullName>DeliveryQTY__c</fullName>
    <label>Delivery Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>