force-app/main/default/objects/Delivery__c/fields/DocumentDate__c.field-meta.xml
<CustomField>
    <fullName>DocumentDate__c</fullName>
    <label>DocumentDate</label>
    <type>Date</type>
</CustomField>