force-app/main/default/objects/Delivery__c/fields/NetValue__c.field-meta.xml
<CustomField>
    <fullName>NetValue__c</fullName>
    <label>NetValue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>