force-app/main/default/objects/Delivery__c/fields/OverallDeliveryStatus__c.field-meta.xml
<CustomField>
    <fullName>OverallDeliveryStatus__c</fullName>
    <label>OverallDeliveryStatus</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
            <value>
                <fullName>Value2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>