force-app/main/default/objects/Delivery__c/fields/SalesDocumentNumber__c.field-meta.xml
<CustomField>
    <fullName>SalesDocumentNumber__c</fullName>
    <label>SalesDocumentNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>