force-app/main/default/objects/Delivery__c/fields/ShipToParty__c.field-meta.xml
<CustomField>
    <fullName>ShipToParty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ShipToParty</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Deliveries</relationshipLabel>
    <relationshipName>Deliveries</relationshipName>
    <type>Lookup</type>
</CustomField>