force-app/main/default/objects/Delivery__c/fields/StorageLocation__c.field-meta.xml
<CustomField>
    <fullName>StorageLocation__c</fullName>
    <label>Storage Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>